feat: add time based greeting to home